fix: founders breakpoints line position mobile

--- a/components/Founders/BreakPoints/BreakPoints.scss
+++ b/components/Founders/BreakPoints/BreakPoints.scss
@@ -44,7 +44,7 @@
       // mobile line
       content: "";
       position: absolute;
-      left: -25px;
+      left: -24px;
       top: 10px;
 
       width: 1px;
